v3.10 (unreleased)
    * Catch and warn for invalid Content-Types.
    * Add a manually extracted list of config options to r2e.1.
    * Add a redirect post-process module.
    * Add new `feed-name` and `feed-url` attributes for the `name-format` setting.
    * Drop support for Python 3.2 and 3.3

v3.9 (2014-09-01)
    * Catch and error out if a user adds a feed with a duplicate name.
    * Split sender into both sendmail's -F and -f.
    * Fix an error with SMTPConnectionError inheritance order ("does not take keyword arguments").
    * Add a new `smtp-ssl-protocol` setting, to select acceptable protocols for SMTP connections.
    * Fix non-compliant User-Agent header for HTTP/1.1.
    * Fix an error in the NoToEmailAddress invocation.
    * Add a new `trust-link` setting, to prefer the `link` attribute over the `id` attribute for identifying entries.

v3.8 (2014-01-18)
    * Sluggify feed names on opmlimport.
    * Allow Unicode letters and digits in feed names, instead of just ASCII letters and digits.

v3.7 (2013-10-11)
    * Fix fallback for titles that contain malformed HTML.
    * Fix atomic saves to avoid garbling config and data files if the disk is full.
    * Convert the `friendly-name` boolean to the new `name-format` setting.  This allow users to customize how the friendly name is constructed.
    * Demote guessed encodings logs from 'error' to 'warning'.

v3.6 (2013-09-09)
    * Fix missing port argument for IMAPAuthenticationError.
    * Fix `<div id="entry>` syntax error in HTML mail.

v3.5 (2013-06-05)
    * Added digest generation and post-processing hooks.
    * Fix html2text configuration (ignored since 2012-10-04).
    * Fix opmlexport crash due to orphaned feed data.
    * Use feed names in OPML 'text' attributes.

v3.4 (2013-05-14)
    * Added post-processing hooks for user-specified message manipulation.