@@ -26,22 +26,6 @@ __url__ = 'https://github.com/rss2email/rss2email'
 __author__ = 'The rss2email maintainers'
 __email__ = 'rss2email@tremily.us'
 __copyright__ = '(C) 2004 Aaron Swartz. GNU GPL 2 or 3.'
-__contributors__ = [
-    'Aaron Swartz (original author)',
-    'Brian Lalor',
-    'Dean Jackson',
-    'Eelis van der Weegen',
-    'Erik Hetzner',
-    'Etienne Millon',
-    'George Saunders',
-    'Joey Hess',
-    'Lindsey Smith (lindsey@allthingsrss.com)',
-    'Marcel Ackermann (http://www.DreamFlasher.de)',
-    "Martin 'Joey' Schulze",
-    'Matej Cepl',
-    'W. Trevor King (long-time maintainer)',
-    'Profpatsch',
-    ]
 
 LOG = _logging.getLogger('rss2email')
 LOG.addHandler(_logging.StreamHandler())
